fix homepage layout issues

--- a/src/styles/sass/3-basics/_global.scss
+++ b/src/styles/sass/3-basics/_global.scss
@@ -1,8 +1,8 @@
-body {
-    @include media-query(mobile) {
-        text-align: center;
-    }
-}
+// body {
+//     @include media-query(mobile) {
+//         text-align: center;
+//     }
+// }
 
 .hide {
     display: none;
