--- a/src/styles/sass/4-layout/_navigation.scss
+++ b/src/styles/sass/4-layout/_navigation.scss
@@ -107,8 +107,14 @@ nav {
 
         li {
             background: no-repeat url(../../../images/backgrounds/squircle-one-grey.svg);
+            // border: 1px solid red;
             text-align: center;
+            display: flex;
+            flex-grow: 0;
+            justify-content: center;
+            padding: 0;
             transition: transform $default-transition-time;
+            // width: 5rem;
 
             &:nth-child(1) {
                 background: no-repeat url(../../../images/backgrounds/squircle-one-pink.svg);
@@ -135,7 +141,12 @@ nav {
             }
 
             a, button {
+                // border: 1px solid red;
+                bottom: .2rem;
                 color: $black;
+                margin: 0;
+                position: relative;
+                width: 100%;
                 
                 &:active {
                     color: $accent;
@@ -154,7 +165,10 @@ nav {
                 }
 
                 svg {
-                    height: 100%;
+                    // height: 100%;
+                    margin: 0;
+                    position: static;
+                    // width: 100%;
 
                     .stroke, .square {
                         stroke: $black;
