--- a/src/styles/sass/5-modules/_instrumentList.scss
+++ b/src/styles/sass/5-modules/_instrumentList.scss
@@ -1,6 +1,7 @@
 .instrument-list {
     margin-top: .8em;
     position: relative;
+    text-align: center;
 
     @include media-query(tablet-portrait-up) {
         margin-left: 3vw;
